--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             </div>
         </div>
         <div class="container">
-            <div class='card-row' id='content'></div>
+            <div class='card-row' id='content'>
+                
+            </div>
         </div>
     </section>
 
@@ -49,7 +51,8 @@
             </p>
         </div>
     </footer>
-  
-    <script type="text/javascript" src='./app.js'></script>
 </body>
+
+<script type="text/javascript" src='./app.js'></script>
+
 </html>
